--- a/theme/journal4/include/footer.phtml
+++ b/theme/journal4/include/footer.phtml
@@ -1,95 +1,17 @@
 <div id="footer">
-	<div class="row contacts" style="background-repeat: repeat; background-position: center top; background-attachment: scroll">
-		<div class="contacts-left">
-			<span class="hint--top" data-hint="Facebook"><a target="_blank" href="tel:0708-61 98 94"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe683;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Twitter"><a target="_blank" href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px; top: 1px" data-icon="&#xe682;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Google +"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe635;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="YouTube"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe642;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Vimeo"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe67f;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Pinterest"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe0af;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Skype"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe67a;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Yahoo"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 21px" data-icon="&#xe67c;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="LinkedIn"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe622;"></i><span class="contacts-text"></span></a></span>
-			<span class="hint--top" data-hint="Flickr"><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 18px" data-icon="&#xe67e;"></i><span class="contacts-text"></span></a></span>
-		</div>
-		<div class="contacts-right">
-			<span><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 22px" data-icon="&#xe6a3;"></i><span class="contacts-text">1.800.555.8989</span></a></span>
-			<span><a href="#"><i style="margin-right: 5px; color: rgb(255, 255, 255); font-size: 22px" data-icon="&#xe61a;"></i><span class="contacts-text">123 Fashion Ave. NY, 10010</span></a></span>
-		</div>
-	</div>
-	<div class="row columns " style="background-attachment: scroll; margin-bottom: 15px">
-		<div class="column text xs-100 sm-50 md-33 lg-20 xl-20 ">
-			<h3>About Us</h3>
-			<div class="column-text-wrap">
-				<p>
-					<img alt="" src="http://journal.digital-atelier.com/4/image/data/journal2/j.png" style="width: 33px; height: 33px; float: left; margin: 5px 10px 5px 0;"/>Journal is an OpenCart framework built for the future. It&nbsp;introduces many innovative features and comes with 10 pre-made skins and 16 multi-purpose modules, all built into the most powerful admin to date.&nbsp;<a href="http://themeforest.net/item/journal-premium-responsive-opencart-theme/4260361?ref=DigitalAtelier" target="_blank">Buy Journal</a>!
-				</p>
-			</div>
-		</div>
-		<div class="column menu xs-100 sm-50 md-33 lg-20 xl-20 ">
-			<h3>Custom Columns</h3>
-			<div class="column-menu-wrap">
-				<ul>
-					<li><a href="tel:18005558989"><i style="margin-right: 5px; color: rgb(68, 67, 73); font-size: 16px" data-icon="&#xe6a3;"></i>1.800.555.8989</a></li>
-					<li><i style="margin-right: 5px; color: rgb(68, 67, 73); font-size: 16px" data-icon="&#xe61a;"></i>1234 Fashion Ave, NY, 10001</li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=product/manufacturer/info&amp;manufacturer_id=8"><i style="margin-right: 5px; color: rgb(68, 67, 73); font-size: 16px" data-icon="&#xe651;"></i>Unlimited Links</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=6"><i style="margin-right: 5px; color: rgb(68, 67, 73); font-size: 16px" data-icon="&#xe060;"></i>With Optional Icons</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=8"><i style="margin-right: 5px; color: rgb(68, 67, 73); font-size: 16px" data-icon="&#xe657;"></i>Theme Features</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="column menu xs-100 sm-50 md-33 lg-20 xl-20 ">
-			<h3>Information</h3>
-			<div class="column-menu-wrap">
-				<ul>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=4"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>About Us</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=6"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>Delivery Information</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=3"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>Privacy Policy</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/information&amp;information_id=5"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>Terms &amp; Conditions</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/contact"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>Contact Us</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/sitemap"><i style="margin-right: 5px; font-size: 14px; top: -1px" data-icon="&#xe62c;"></i>Site Map</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="column menu xs-100 sm-50 md-33 lg-20 xl-20 ">
-			<h3>Customer Support</h3>
-			<div class="column-menu-wrap">
-				<ul>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=information/contact"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Contact Us</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=account/return/add"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Returns</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=account/order"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Order History</a></li>
-					<li><a href="http://journal.digital-atelier.com/4/index.php?route=product/compare" class="compare-total"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Custom Link</a></li>
-					<li><a href="#"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Sample Link</a></li>
-					<li><a href="#"><i style="margin-right: 5px; font-size: 5px; top: -1px" data-icon="&#xe643;"></i>Another Sample Link</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="column newsletter xs-100 sm-50 md-33 lg-20 xl-20 ">
-			<h3>Newsletter</h3>
-			<div class="box journal-newsletter text-top " id="journal-newsletter-519497094" style="; ">
-				<div class="box-content" style="background-repeat: repeat; background-position: center top; background-attachment: scroll">
-					<span class="newsletter-text" style="font-weight: 400; font-family: 'Playfair Display'; font-size: 15px; font-style: normal; text-transform: none; color: rgb(56, 56, 56)">Stay up to date with news and promotions by signing up for our weekly newsletter.</span>
-					<span class="newsletter-input-wrap" style="height: 39px">
-					<input type="text" class="newsletter-email" placeholder="Email Address..." style="border-width: 1px; border-style: solid; border-color: rgb(204, 204, 204); font-size: ; font-style: ; text-transform: "/>
-					<a class="newsletter-button button" onclick="Journal.newsletter($('#journal-newsletter-519497094'));" style="margin-top: -1px; right: 4px; font-size: ; font-style: ; text-transform: ">Go</a>
-					</span>
-				</div>
-			</div>
-		</div>
-	</div>
+	<%
+		g_static_block_code = "TPL_JOURNAL4_FOOTER_1"
+	%>
+	<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+	
+	<%
+		g_static_block_code = "TPL_JOURNAL4_FOOTER_2"
+	%>
+	<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+	
 </div>
-<div class="bottom-footer fullwidth-bar">
-	<div class="">
-		<div class="copyright">
-			Copyright &copy; 2016, Your Store, All Rights Reserved.
-		</div>
-		<div class="payments">
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/visa-51x32.png" alt="Visa" width="51" height="32"/>
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/mc-51x32.png" alt="MasterCard" width="51" height="32"/>
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/maestro-51x32.png" alt="Maestro" width="51" height="32"/>
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/disc-51x32.png" alt="Discover" width="51" height="32"/>
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/ax-51x32.png" alt="American Express" width="51" height="32"/>
-			<img src="//digital-cdn.net/4/image/cache/data/journal2/transparent-51x32.png" class="lazy" data-src="//digital-cdn.net/4/image/cache/data/journal2/cards/pp-51x32.png" alt="PayPal" width="51" height="32"/>
-		</div>
-	</div>
-</div>
+<%
+	g_static_block_code = "TPL_JOURNAL4_FOOTER_BAR"
+%>
+<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+	
