--- a/theme/journal4/search.phtml
+++ b/theme/journal4/search.phtml
@@ -3,7 +3,7 @@
 	Response.CharSet = "UTF-8"
 	g_route_page_id = "dept"
 %>
-<!--#INCLUDE FILE="../../core/catalog/include_dept_start.phtml"-->
+<!--#INCLUDE FILE="../../core/catalog/include_search_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
 <!DOCTYPE html>
 <html class="webkit chrome chrome53 win journal-desktop is-guest skin-4 header-center header-center-sticky backface product-grid-second-image product-list-second-image category-page category-page-59_105 layout-3 route-product-category oc2 one-column">
@@ -23,7 +23,7 @@
 				<!--#INCLUDE FILE="include/left_category.phtml"-->
 			</div>
 			<div id="content" class="col-sm-9">
-				<!--#INCLUDE FILE="include/dept.phtml"-->
+				<!--#INCLUDE FILE="include/search.phtml"-->	
 			</div>
 		</div>
 	</div>
@@ -38,4 +38,4 @@
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
-<!--#INCLUDE FILE="../../core/include_index_end.phtml"-->
+<<!--#INCLUDE FILE="../../core/catalog/include_search_end.phtml"-->
